--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div><!-- End Carousel Item -->
 
         <div class="carousel-item">
-          <img src="assets/image/WhatsApp Image 2024-07-22 at 14.28.11.jpeg" alt="">
+          <img src="assets/Berita/gmbdlh.jpg" alt="">
           <div class="carousel-container">
             <h2>Tugas Dinas Lingkungan Hidup</h2>
             <p>Merumuskan kebijakan lingkungan hidup dan kehutanan dan juga melakukan fungsi lain yang diberikan oleh kepala daerah.</p>
@@ -87,7 +87,7 @@
         </div><!-- End Carousel Item -->
 
         <div class="carousel-item">
-          <img src="assets/image/TimePhoto_20240905_125217.jpg" alt="">
+          <img src="assets/Berita/gmbdlh.jpg" alt="">
           <div class="carousel-container">
             <h2>Struktur Dinas Lingkungan Hidup</h2>
             <p>Dinas Lingkungan Hidup dipimpin oleh seorang Kepala Dinas yang bertanggung jawab kepada Kepala Daerah melalui Sekretaris Daerah.</p>
@@ -95,7 +95,7 @@
         </div><!-- End Carousel Item -->
 
         <div class="carousel-item">
-          <img src="assets/image/IMG_20241001_114556.jpg" alt="">
+          <img src="assets/Berita/gmbdlh.jpg" alt="">
           <div class="carousel-container">
             <h2>Dasar Hukum Dinas Lingkungan Hidup</h2>
             <p>Dasar hukum keberadaan Dinas Lingkungan Hidup adalah peraturan pemerintah nomor 38 tahun 2007 tentang Pembagian Urusan Pemerintahan.</p>
@@ -103,7 +103,7 @@
         </div><!-- End Carousel Item -->
 
         <div class="carousel-item">
-          <img src="assets/image/WhatsApp Image 2024-07-24 at 09.48.47.jpeg" alt="">
+          <img src="assets/Berita/gmbdlh.jpg" alt="">
           <div class="carousel-container">
             <h2>Tujuan Dinas Lingkungan Hidup</h2>
             <p>Meningkatkan peran serta masyarakat dan pihak-pihak yang terkait dengan menumbuhkan rasa kesadaran yang tinggi terhadap upaya pengelolaan dan pelestarian fungsi lingkungan hidup.</p>
